<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sooffer</string>
    <string name="app_superbname">Sooffer</string>
    <string name="facebook_app_id" tools:ignore="MissingTranslation">281268303640131</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb281268303640131</string>
    <string-array name="nav_drawer_labels">
        <item>@string/profile</item>
        <item>@string/wallet</item>
        <item>@string/payment</item>
        <item>@string/trip</item>
        <item>@string/invite</item>
        <item>@string/Contacts</item>
        <item>@string/support</item>
        <item>@string/offers</item>
        <item>@string/favorite</item>
        <item>@string/notification</item>
    </string-array>
    <string name="default_notification_channel_id">1</string>
    <string name="welcome_title">There are many variations of passangs of lorem \n lpsum available, but the majority have suffered \n alternation in some form ,by injected humour</string>
    <string name="favorite_location">Favorite Location</string>
    <string name="login">Login</string>
    <string name="notification">Notifications</string>
    <string name="register">Register</string>
    <string name="favorite">Add Favorite Place</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="app_font" translatable="false">Roboto_Regular.ttf</string>
    <string name="add_card_desc" translatable="false">Secure payment powered by Stripe</string>
    <string name="card_number" translatable="false">Card number</string>
    <string name="expiry_date" translatable="false">Expiry date</string>
    <string name="profile">My Profile</string>
    <string name="payment">Payment</string>
    <string name="wallet">My Wallet</string>
    <string name="trip">Trips</string>
    <string name="invite">Invite Friends</string>
    <string name="Contacts">Emergency Contact</string>
    <string name="support">Support</string>
    <string name="invite_code">Share your invite Code</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="language">Language</string>
    <string name="currency">Currency</string>
    <string name="plasces">Places</string>
    <string name="home_address">Home Address</string>
    <string name="home_place">Home Place</string>
    <string name="work_address">Work Address</string>
    <string name="work_place">work Place</string>
    <string name="invalidpass">INVALID_PASSWORD</string>
    <string name="cc">CC</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="faq">FAQ</string>
    <string name="driver">Driver</string>
    <string name="rider">Rider</string>
    <string name="general">General</string>
    <string name="feature_of_cabs">Feature of Cabs</string>
    <string name="how_to">How to</string>
    <string name="book_cancel">How to cancel your booking?</string>
    <string name="simply_tab">Simply tap on the cancel the cancel button</string>
    <string name="how_workings">How to Works?</string>
    <string name="login_to_the_rider">Login to the Ride application and select appropriate car type.Enter the destination and send request to driers</string>
    <string name="signups_as">How to signups as a rider?</string>
    <string name="appstore">First of all downloads the Sooffer Passenger application from the Playstore.After installing go to signup page and fillup details.</string>
    <string name="driver_signup">First of all download the Sooffer Driver application from the Playstore. After installing go to signup page and fillup required details After sign up ,add your vehicle and documents. Once your account is verified and activated, you can Go Online and accept the ride request.</string>
    <string name="how_driver_signup">How to signup as a driver ?</string>
    <string name="send_query">Send Query</string>
    <string name="card_details">Card Details</string>
    <string name="add_card">Add Card</string>
    <string name="card_type">Card Type</string>
    <string name="visa">Visa</string>
    <string name="cvv">cvv</string>
    <string name="no_card_available">No card Available</string>
    <string name="please_add_your_card_to_use_card_payment">Please Add your card to use card Payment</string>
    <string name="please_wait">Please wait...</string>
    <string name="enter_card_details">Card details not valid</string>
    <string name="your_balance">Your Balance</string>
    <string name="view_transcations">View Transactions</string>
    <string name="add_money">Add Money</string>
    <string name="it_s_safe_and_secure">It\'s safe and secure</string>
    <string name="recharge_amount">Recharge Amount</string>
    <string name="by_proceeding_ahead_you_agree_to_our_terms_amp_n_privacy_policy"><![CDATA[By proceeding ahead, you agree to our Terms &  Privacy Policy]]></string>
    <string name="view_terms_amp_privacy_policy"><![CDATA[View Terms & Privacy Policy]]></string>
    <string name="notes">Notes</string>
    <string name="no_transaction_available">No transaction available</string>
    <string name="your_transcations">Your Transactions</string>
    <string name="no_trip_data">No Trip Data</string>
    <string name="internet_connect">Internet Alert</string>
    <string name="connection">Please Check Your Internet Connection</string>
    <string name="please_added_card">Please Add Your Card</string>
    <string name="ok">OK</string>
    <string name="file_provider_authority" translatable="false">com.soofer.app.fileprovider</string>
    <string name="offers">Offers</string>
    <string name="enter_Valid_otp">Enter your OTP</string>
    <string name="your_trip_has_ended_please_rate_your_rider">Thank you! Don\'t forget to rate our service</string>
    <string name="bill_date">Bill Date</string>
    <string name="discount_applied">Discount Applied</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="entervalidemailornumber">Enter Valid Email or Mobile Number</string>
    <string name="distance_fare">Distance Fare</string>
    <string name="time_fare">Waiting Fare</string>
    <string name="balance_fare">Cancellation Fare</string>
    <string name="detected_fare">Detected Fare</string>
    <string name="how_was_your_ride">How Was Your Ride ?</string>
    <string name="enter_your_comments">Enter your comments</string>
    <string name="pickup_address">Pickup address</string>
    <string name="drop_address">Drop address</string>
    <string name="pickup_fee">Pick up Fee</string>
    <string name="access_fee">TAX</string>
    <string name="surge">Surge Fee</string>
    <string name="flat_fee">Flat Fee</string>
    <string name="payment_method">Payment Mode</string>
    <string name="walletDetect">Wallet Detection</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="delete">Delete</string>
    <string name="ride_faress">Ride Fare</string>
    <string name="pickup_addressss">Pickup address</string>
    <string name="search">Search</string>
    <string name="recent_and_favorite_places">Favorite Places</string>
    <string name="poor_network">Something went wrong</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="code_and_earn_the_referral_amount">code and earn the referral amount</string>
    <string name="invite_your_friends_by_sharing_above_invite">Invite your friends by sharing above invite</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="make_your_travel_safe">Make your travel safe</string>
    <string name="send_alert_to_your_friends_family">Send alert to your friends/family</string>
    <string name="members_in_case_of_an_emergency">members in case of an emergency</string>
    <string name="please_add_them_to_your">Please add them to your</string>
    <string name="you_can_add_up_to_2_contacts">You can add up to 2 contacts</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="your_trip">Trips</string>
    <string name="book_your_ride">Book your ride</string>
    <string name="invoice"> <u>Trip Invoice</u></string>
    <string name="i_agree_to_the_terms_amp_condition_and_privacy_policy"><![CDATA[I agree to the terms & condition and privacy policy]]></string>
    <string name="by_continuing_you_may_receive_an_sms_for_verification_message_and_date_rate_may_apply">By Continuing you may receive an sms for verification. Message and date rate may apply.</string>
    <string name="please_keep_stops_to_3_minutes_or_less">Please Keep Stops to 3 minutes or less</string>
    <string name="as_a_courtesy_for_your_driver_s_time_please_limit_each_stop_to_3_minutes_or_less_otherwise_your_fare_may_change">As a courtesy for your driver\'s time , please limit each stop to 3 minutes or less, otherwise your fare may change,</string>
    <string name="done">Done</string>
    <string name="enter_the_email_address_you_used_to_register">Enter the Mobile Number you used to register
</string>
    <string name="pickupss">Pickup</string>
    <string name="stops">Stop</string>
    <string name="drop">Drop</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="getting_address">Getting Address....</string>
    <string name="please_select_your_Address">Please Select Your Address</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="your_driver">Your Driver</string>
    <string name="card">Card</string>
    <string name="profiles">Profile</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="name_your_favorite_ex_gym">Name your favorite(EX.Gym)</string>
    <string name="save">Save</string>
    <string name="night_charge_apply">Night charge apply</string>
    <string name="pleask_charge_App">\"Peak charge apply \"</string>
    <string name="base_package">Base Package</string>
    <string name="package_km_fare">Package Mile Fare</string>
    <string name="fare_for_remaining_km">Fare for Remaining mile</string>
    <string name="remaining_time_fare">Remaining Time Fare</string>
    <string name="discount">Discount</string>
    <string name="total_fare">Total Fare</string>
    <string name="total_bill">Total Bill</string>
    <string name="view_fare_detals">view Fare Detail</string>
    <string name="km_fare">Distance Fare</string>
    <string name="waiting_fare">Waiting Fare</string>
    <string name="pickup_fare">Pickup Fee</string>
    <string name="access_fare">TAX</string>
    <string name="cancellation_fare">Cancellation Fare</string>
    <string name="trip_details">Trip detail</string>
    <string name="status">Status : </string>
    <string name="required">Require</string>
    <string name="submit">Submit</string>
    <string name="save_as_favourite">Save as favourite</string>
    <string name="find_your_favourite_locations_by_tapping_the_search_bar_and_easy_selection_them_next_time">Added to your list of favourite places.</string>
    <string name="go_it">GOT IT</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="cancel">Cancel</string>
    <string name="ride_later">Ride Later</string>
    <string name="send">Send</string>
    <string name="enter_invoice_email_address">Enter email address</string>
    <string name="enter_email_address">Enter email address</string>
</resources>