<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/enter_email_address"
                android:padding="@dimen/_5sdp"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <com.soofer.app.CommonClass.Customizeview.CustomEditText
                android:id="@+id/email_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/enter_invoice_email_address"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_14sdp"
                app:met_baseColor="@color/black"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextColor="@color/black"
                app:met_primaryColor="?colorAccent"
                app:met_singleLineEllipsis="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:id="@+id/cancel_btn"
                    android:layout_height="wrap_content"/>
                <androidx.legacy.widget.Space
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="match_parent"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:text="@string/send"
                    android:id="@+id/send_btn"
                    android:layout_height="wrap_content"/>
            </LinearLayout>



        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>