<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="@dimen/_5sdp"
        android:padding="@dimen/_5sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/save_as_favourite"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textFontWeight="700" />

        <View
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_3sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/find_your_favourite_locations_by_tapping_the_search_bar_and_easy_selection_them_next_time"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="normal" />

         <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
             android:background="@drawable/ic_button_bg"
             android:layout_marginHorizontal="@dimen/_10sdp"
             android:layout_marginBottom="@dimen/_10sdp"
             android:backgroundTint="@color/colorPrimary"
            android:text="@string/go_it"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>