<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@color/white"
                android:elevation="@dimen/_5sdp">

                <ImageButton
                    android:id="@+id/back_img"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:tint="@color/black"
                    app:srcCompat="@drawable/ic_arrow_back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/back_img"
                    android:text="@string/invite_friends"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />
            </RelativeLayout>

            <ImageView
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                app:srcCompat="@drawable/ic_email_invite" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/invite_code"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/referral_code_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/lite_color"
                android:gravity="center"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                android:text="@string/invite_your_friends_by_sharing_above_invite"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/code_and_earn_the_referral_amount"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <Button
            android:id="@+id/share_referal_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:background="@drawable/ic_button_bg"
            android:text="@string/invite_friends"
            android:textColor="@color/white" />
    </RelativeLayout>
</FrameLayout>